[package]
name = "league_sheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-web = "4.4.1"
dotenv = "0.15.0"
mysql = "24.0.0"
refinery = "0.8.12"
refinery-macros = "0.8.12"
regex = "1.10.3"
rocket = "0.5.0"
rocket_contrib = "0.4.11"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
sqlx = { version = "0.7.3", features = ["runtime-async-std-native-tls", "mysql"] }


